--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -257,7 +257,7 @@ Overfit models will fail to generalize on new data since the variance structure 
 
 
 
-In \cref{figure:biasVariance}, the authors of \cr0ef{} fit a model to illustrate the interaction between bias and variance. The model increases complexity when using a greater number of features. This is because during the optimization procedure, the algorithm has to fit more parameters. Thus, the model increases in complexity, as measured in its degrees of freedom.
+In \cref{figure:biasVariance}, the authors of \textcite{hastie-elemstatslearn} fit a model to illustrate the interaction between bias and variance. The model increases complexity when using a greater number of features. This is because during the optimization procedure, the algorithm has to fit more parameters. Thus, the model increases in complexity, as measured in its degrees of freedom.
 
 As a similar example, we reproduce the previous behavior on our own dataset.
 Consider \cref{target2} which has a high imbalance between the positive and negative target classes.
