minor style and re-explain base condition

--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -124,12 +124,12 @@ The difference relies in that cross-migrations are not as important to our study
 
 
 \begin{problem}\label{target4}
-Users that migrated from the endemic region, but conditional to users which are currently not endemic. This means that we have $u \in EU_{1}^{\complement}$ as a base condition.
+Users that migrated from the endemic region, but conditional to users which are currently not endemic. This means that we will only consider users which $u \in EU_{1}^{\complement}$ as a base condition.
 
 \begin{align*}
 			Y_u =
 			\begin{cases}
-				& 1 \ \mbox{if} \ u \in ( EU_{0} \cap { EU_{1} }^{\complement}) \forall u s.t. u \in EU_{1}^{\complement}    \\
+				& 1 \ \mbox{if} \ u \in ( EU_{0} \cap { EU_{1} }^{\complement})    \\
 				& 0 \ \mbox{if not}.
 			\end{cases}
 		\end{align*}
